--- a/Portfolio.html
+++ b/Portfolio.html
@@ -15,13 +15,40 @@
     </header>
     <main>
         <blockquote>	
-            Zwei Dinge sind zu unserer Arbeit nötig: Unermüdliche Ausdauer und die Bereitschaft, etwas, in das man viel Zeit und Arbeit gesteckt hat, wieder wegzuwerfen. <em>-Albert Eistein-</em>
+            Internet = Inter connected networks <em>-bitte merken-</em>
         </blockquote>
 
-        <h2>Hier ein tolles 4min Video:</h2>
+        <table>
+            <tr>
+                <td>
+                    <img src="Marissa.jpeg" alt="">
+                </td>
+                <td>
+                    <img src="Maria.jpeg" alt="">
+                </td>
+                <td>
+                    <img src="Lilli_K.jpeg" alt="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>Marissa</p>
+                </td>
+                <td>
+                    <p>Maria</p>
+                </td>
+                <td>
+                    <p>Lilli</p>
+                </td>
+            </tr>
+        </table>
+
+        <h2>Hier ein tolles 4min Video von Lillis Tanzgruppe:</h2>
         <video autobuffer controls>
             <source src="Video-Tanz.mp4" type="video/mp4">
         </video>
+        <br>
+        <br>
 
     </main>
     <footer>
