--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <table>
             <tr>
                 <td>
-                    <img src="Marissa.jpeg" alt="">
+                    <img src="Bilder/Marissa.jpeg" alt="">
                 </td>
                 <td>
-                    <img src="Maria.jpeg" alt="">
+                    <img src="Bilder/Maria.jpeg" alt="">
                 </td>
                 <td>
-                    <img src="Lilli_K.jpeg" alt="">
+                    <img src="Bilder/Lilli_K.jpeg" alt="">
                 </td>
             </tr>
             <tr>
@@ -45,7 +45,7 @@
 
         <h2>Hier ein tolles 4min Video von Lillis Tanzgruppe:</h2>
         <video autobuffer controls>
-            <source src="Video-Tanz.mp4" type="video/mp4">
+            <source src="Bilder/Video-Tanz.mp4" type="video/mp4">
         </video>
         <br>
         <br>
